changed quotation marks that cause problems with latexdiff

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3374,7 +3374,7 @@ Often is useful to maintain different versions of an ontology within languages, 
 For example,  DOLCE is a foundational ontology that has primarily been formalized in
  the first-order logic 
 ontology language KIF (a predecessor of Common Logic), but also in OWL (``DOLCE Lite'') 
-\cite{dolce}. This ‘OWLized’ version was targeting use in semantic web services and domain 
+\cite{dolce}. This ``OWLized'' version was targeting use in semantic web services and domain 
 ontology interoperability, and to provide the generic categories and relationships to aid 
  domain ontology development. DOLCE has been used also for semantic middleware, and in 
 OWL-formalized ontologies of different domains, including neuroimaging, computing, and ecology.
