massaged some uses of cases environment in order to solve latexdiff problems

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8285,8 +8285,7 @@ $clist = Sequence((defaultRel,sym^1_i,sym^2_i)\}_{i=1,\ldots,k})$.
 If $c$ is a \syntax{SingleCorrespondence},
 $$sem(\Gamma, \Sigma_1,\Sigma_2, (\mathit{defaultConf}, \mathit{defaultRel}), c) = (clist, cvalues)$$
 \noindent 
-where
-$conf = \begin{cases}
+where $conf = \begin{cases}
        \mathit{defaultConf} & c.\syntax{confidence} \text{ is missing,}\\
        c.\syntax{confidence} & \text{otherwise} 
 \end{cases}$\\
@@ -8339,9 +8338,7 @@ and
 $L_2 = (aName', \cI_2,\Sigma_2,\cM_2,\Delta_2)$
 
 $$sem(\Gamma, L_1, L_2, s) = (rel(L_1), rel(L_2))$$
-\noindent where
-$$ rel(L) =
- \begin{cases}
+\noindent where $$ rel(L) = \begin{cases}
                                    (L_1,L_2) & \mbox{if } s = \syntax{single-domain}\\
                                    (name_1,\cI_1,\Sigma'_1,\cM'_1,\Delta'_1),
                                    (name_2,\cI_2,\Sigma'_2,\cM'_2,\Delta'_2)& \mbox{otherwise}
