solved latexdiff problems

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8289,8 +8289,7 @@ where $conf = \begin{cases}
        \mathit{defaultConf} & c.\syntax{confidence} \text{ is missing,}\\
        c.\syntax{confidence} & \text{otherwise} 
 \end{cases}$\\
-$rel = 
-\begin{cases}
+$rel = \begin{cases}
        \mathit{defaultRel} & c.\syntax{relation} \text{ is missing,}\\
        c.\syntax{relation} & \text{otherwise} 
 \end{cases}
