in the sequel -> in the following, issue #240

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1609,7 +1609,7 @@ algorithms that have been employed in obtaining an alignment.
 \sclause{Conformance of an Application With \DOL}\label{c:conform:application}
 
 
-In the sequel, ``\DOL abstract syntax'' means an XMI document that
+In the following, ``\DOL abstract syntax'' means an XMI document that
 conforms to the \DOL metamodel. Optionally, further representations
 (e.g. as JSON) can be supported.
 \begin{itemize}
@@ -5995,7 +5995,7 @@ common components. Amalgamation is a common technical assumption in the
 study of specification semantics
 \cite{STbook}.
 
-In the sequel, fix an arbitrary institution
+In the following, fix an arbitrary institution
 $I=(\Sig,\Sen,\Mod,\models)$.  
 
 \begin{definition}
