changed default to model-conservative; fixed #227

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2072,7 +2072,7 @@ first OMS.
 
 \termdefinitionLight{conservative extension\index{conservative extension ! (general)}}{extension that does not add new logical properties with respect to the signature of the extended OMS.}
   \begin{note}
-   An extension is a consequence-theoretic or model-theoretic conservative extension\index{conservative extension ! model-theoretic}. If used without qualification, the consequence-theoretic version is meant.
+   An extension is a consequence-theoretic or model-theoretic conservative extension\index{conservative extension ! model-theoretic}. If used without qualification, the model-theoretic version is meant.
   \end{note}
 
 
@@ -2172,7 +2172,7 @@ Any satisfiable OMS is \termref{consistent}, but there are some
 %OMS that preserve all entailments over a set of terms $\Sigma$ called seed signature.  Modules based on syntactic locality are defined in Cuenca Grau, B., Horrocks, I., Kazakov, Y., Sattler, U.: Modular reuse of ontologies: Theory and practice. J. of Artif. Intell. Research 31, 273–318 (2008)}}
   \begin{note}
 The conservative extension can be either model-theoretic or consequence-theoretic; without
- qualification, the consequence-theoretic version is used.
+ qualification, the model-theoretic version is used.
   \end{note}
 %\ednote{this is about coverage only. Should we also care about safety? No, see \url{https://github.com/tillmo/DOL/issues/23}.}
 
@@ -4623,7 +4623,7 @@ whether they are kept (and the other ones are removed).
 While in most cases the translation from concrete to abstract syntax
 is obvious (the structure is largely the same),  
 \begin{itemize}
-\item both \syntax{\%satisfiable} and \syntax{\%mcons} are translated
+\item both \syntax{\%satisfiable}, \syntax{\%cons} and \syntax{\%mcons} are translated
   to \syntax{model-conservative},
 \item both \syntax{\%consistent}  and \syntax{\%ccons} are translated
   to \syntax{consequence-conservative},,
@@ -4685,7 +4685,8 @@ ExtensionOMS       ::= [ExtConservativityStrength]
                        ExtendingOMS
 ConservativityStrength ::= Conservative | '%mono' | '%wdef' | '%def'
 ExtConservativityStrength ::= ConservativityStrength | '%implied'
-Conservative       ::= '%ccons'
+Conservative       ::= '%cons'
+                     | '%ccons'
                      | '%mcons'
                      | '%notccons'
                      | '%notmcons'
